--- a/RL.ipynb
+++ b/RL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "# {'pkts_dropped': 0.0,\n",
     "#  'pkts_transmitted': 75.0,\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "device = torch.device(\"cpu\")"
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "import caviar_tools\n",
     "from beamselect_env import BeamSelectionEnv"
@@ -104,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
-    "reward_type = 'test'    # 'test' or 'train'\n",
-    "epi = [0,10] #[start,end] \n",
-    "epi_val = [500,509]\n",
+    "reward_type = 'train'    # 'test' or 'train'\n",
+    "epi = [0,9] #[start,end] \n",
+    "epi_val = [500,549]\n",
     "\n",
     "\n",
     "gym_env = BeamSelectionEnv(epi, reward_type)\n",
@@ -117,14 +117,58 @@
     "n_steps = caviar_tools.linecount(epi)\n",
     "n_steps_val = caviar_tools.linecount(epi_val)"
    ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/gym/logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "n_steps"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "61631"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "# chan_mag = []\n",
+    "# pckts = []\n",
+    "# for i in tqdm.tqdm_notebook(range(n_steps)):\n",
+    "#     next_state, _, _, _ = gym_env.step([np.random.randint(0,3), np.random.randint(0, 64)])\n",
+    "#     pckts.append(next_state[-2])\n",
+    "#     chan_mag.append(next_state[-1])"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
-    "n_steps"
+    "# print(max(np.array(pckts).astype('float')), min(np.array(pckts).astype('float')))\n",
+    "# print(max(np.array(chan_mag).astype('float')), min(np.array(chan_mag).astype('float')))"
    ],
    "outputs": [],
    "metadata": {}
@@ -147,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "source": [
     "Transition = namedtuple('Transition',\n",
     "                        ('state', 'action', 'next_state', 'reward'))\n",
@@ -180,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
@@ -224,17 +268,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "tmp = DQN()\n",
-    "sample = torch.rand((1,7))\n",
-    "tmp(sample).shape"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Hyperparams"
@@ -243,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
     "BATCH_SIZE = 128\n",
     "GAMMA = 0.99\n",
@@ -274,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
-    "policy_net = DQN(11, 192).to(device)\n",
-    "target_net = DQN(11, 192).to(device)\n",
+    "policy_net = DQN(13, 192).to(device)\n",
+    "target_net = DQN(13, 192).to(device)\n",
     "target_net.load_state_dict(policy_net.state_dict())\n",
     "target_net.eval()\n",
     "\n",
-    "optimizer = optim.RMSprop(policy_net.parameters())\n",
+    "optimizer = optim.Adam(policy_net.parameters())\n",
     "memory = ReplayMemory(10000)\n",
     "\n",
     "n_actions = 64*3\n",
@@ -324,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "def optimize_model():\n",
     "    if len(memory) < BATCH_SIZE:\n",
@@ -382,10 +415,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "# Tensorboard\n",
-    "log_dir = './mini_logs_with_test/target_10' \n",
+    "log_dir = './mini_logs_with_test/train_10_epoch_10_reward_train' \n",
     "\n",
     "writer = SummaryWriter(log_dir=log_dir)"
    ],
@@ -394,12 +427,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "def val(train_step:int,gym_env_val:gym.Env,n_steps_val:int=n_steps_val,\n",
     "        writer:SummaryWriter=writer):\n",
     "\n",
-    "    state = torch.zeros((1,11), dtype=torch.float32)\n",
+    "    state = torch.zeros((1,13), dtype=torch.float32)\n",
     "    ovr_reward = 0\n",
     "    for i_episode in tqdm.tqdm_notebook(range(n_steps_val),desc='Validation'):\n",
     "        # Select and perform an action\n",
@@ -430,13 +463,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "source": [
     "# Initialize the environment and state\n",
     "cnt = 0\n",
+    "gym_env_cp = copy.deepcopy(gym_env)\n",
     "for i in range(0,EPOCH):\n",
-    "    gym_env.reset()\n",
-    "    state = torch.zeros((1,11), dtype=torch.float32)\n",
+    "    gym_env = copy.deepcopy(gym_env_cp)\n",
+    "    state = torch.zeros((1,13), dtype=torch.float32)\n",
     "    ovr_reward = 0\n",
     "    for i_episode in tqdm.tqdm_notebook(range(n_steps),desc='Train'):\n",
     "        # Select and perform an action\n",
@@ -451,7 +485,7 @@
     "        next_state = torch.tensor(next_state)\n",
     "        reward = torch.tensor([reward], device=device).float()\n",
     "\n",
-    "        writer.add_scalar('episode_reward',reward,i_episode)\n",
+    "        writer.add_scalar('episode_reward',reward,cnt)\n",
     "\n",
     "        # print(next_state)\n",
     "        # print(state)\n",
@@ -464,15 +498,19 @@
     "        # Perform one step of the optimization (on the policy network)\n",
     "        optimize_model()\n",
     "        \n",
-    "        cnt+=1\n",
     "        # Update the target network, copying all weights and biases in DQN\n",
     "        if i_episode % TARGET_UPDATE == 0:\n",
     "            target_net.load_state_dict(policy_net.state_dict())\n",
     "\n",
     "        if (i_episode) == 0:\n",
     "            val(cnt, copy.deepcopy(gym_env_val))\n",
+    "        cnt+=1\n",
+    "        \n",
+    "    print(f'Overall Train reward after epoch {i} = {ovr_reward:.2f}. ' \\\n",
+    "        f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
+    "    gym_env.close()\n",
     "\n",
-    "    writer.add_hparams(\n",
+    "writer.add_hparams(\n",
     "        {'BATCH_SIZE' : BATCH_SIZE,\n",
     "        'GAMMA' : GAMMA,\n",
     "        'EPS_START' : EPS_START,\n",
@@ -484,24 +522,67 @@
     "            'Average Reward': ovr_reward/n_steps\n",
     "        }\n",
     "    )\n",
-    "    print(f'Overall Train reward after 1 epoch = {ovr_reward:.2f}. ' \\\n",
-    "        f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
+    "gym_env_cp.close()\n",
     "\n",
-    "val(cnt, copy.deepcopy(gym_env_val))\n",
-    "gym_env.close()"
+    "val(cnt, copy.deepcopy(gym_env_val))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "ipykernel_launcher:8: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "95fea6f7e4dc46fb90464d802a63ec9b"
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/61631 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "ipykernel_launcher:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "438b9f8ba94741a6a81ad753f2c04ac0"
+      },
+      "text/plain": [
+       "Validation:   0%|          | 0/306431 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
    "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.13 64-bit ('ITU': conda)"
+   "display_name": "Python 3.6.9 64-bit ('torch_rl': venv)"
   },
   "language_info": {
    "name": "python",
-   "version": "3.6.13",
+   "version": "3.6.9",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -513,7 +594,7 @@
   },
   "orig_nbformat": 2,
   "interpreter": {
-   "hash": "704f8173b5278a07e1dad217082faca02c99b0dff81b24cc095b855fb1648990"
+   "hash": "f8337d322f02065436781250dc8881439cca8a58f1212dae4e4294dbbc4e4375"
   }
  },
  "nbformat": 4,
