Corrected Epsilon Greedy

--- a/RL.ipynb
+++ b/RL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "# {'pkts_dropped': 0.0,\n",
     "#  'pkts_transmitted': 75.0,\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "device = torch.device(\"cpu\")"
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "import caviar_tools\n",
     "from beamselect_env import BeamSelectionEnv"
@@ -104,10 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "reward_type = 'train'    # 'test' or 'train'\n",
-    "epi = [0,9] #[start,end] \n",
+    "epi = [0,10] #[start,end] \n",
     "epi_val = [500,549]\n",
     "\n",
     "\n",
@@ -117,55 +117,35 @@
     "n_steps = caviar_tools.linecount(epi)\n",
     "n_steps_val = caviar_tools.linecount(epi_val)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/gym/logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
-      "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "n_steps"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "61631"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "# chan_mag = []\n",
-    "# pckts = []\n",
-    "# for i in tqdm.tqdm_notebook(range(n_steps)):\n",
-    "#     next_state, _, _, _ = gym_env.step([np.random.randint(0,3), np.random.randint(0, 64)])\n",
-    "#     pckts.append(next_state[-2])\n",
-    "#     chan_mag.append(next_state[-1])"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "source": [
+    "# chan_mag = []\n",
+    "# pckts = []\n",
+    "# for i in tqdm.tqdm_notebook(range(n_steps)):\n",
+    "#     next_state, _, _, _ = gym_env.step([np.random.randint(0,3), np.random.randint(0, 64)])\n",
+    "#     pckts.append(next_state[7])\n",
+    "#     chan_mag.append(next_state[8])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [
     "# print(max(np.array(pckts).astype('float')), min(np.array(pckts).astype('float')))\n",
     "# print(max(np.array(chan_mag).astype('float')), min(np.array(chan_mag).astype('float')))"
@@ -191,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "source": [
     "Transition = namedtuple('Transition',\n",
     "                        ('state', 'action', 'next_state', 'reward'))\n",
@@ -224,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
@@ -276,10 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "BATCH_SIZE = 128\n",
     "GAMMA = 0.99\n",
+    "\n",
     "EPS_START = 0.9\n",
     "EPS_END = 0.3\n",
     "\n",
@@ -307,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "policy_net = DQN(13, 192).to(device)\n",
     "target_net = DQN(13, 192).to(device)\n",
@@ -320,7 +301,7 @@
     "n_actions = 64*3\n",
     "steps_done = 0\n",
     "\n",
-    "def select_action(state,val:bool=False):\n",
+    "def select_action(state,steps_done:int=0,val:bool=False):\n",
     "    if val:\n",
     "        with torch.no_grad():\n",
     "            # t.max(1) will return largest column value of each row.\n",
@@ -329,11 +310,9 @@
     "            flattened_action = policy_net(state).max(dim = 1).indices\n",
     "            return torch.tensor([[flattened_action]], device=device, dtype=torch.long)\n",
     "    else:\n",
-    "        global steps_done\n",
     "        sample = random.random()\n",
     "        eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
     "            math.exp(-1. * steps_done / EPS_DECAY)\n",
-    "        steps_done += 1\n",
     "        if sample > eps_threshold:\n",
     "            with torch.no_grad():\n",
     "                # t.max(1) will return largest column value of each row.\n",
@@ -357,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "def optimize_model():\n",
     "    if len(memory) < BATCH_SIZE:\n",
@@ -415,10 +394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "source": [
     "# Tensorboard\n",
-    "log_dir = './mini_logs_with_test/train_10_epoch_10_reward_train' \n",
+    "log_dir = './rough_logs/' \n",
     "\n",
     "writer = SummaryWriter(log_dir=log_dir)"
    ],
@@ -427,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "source": [
     "def val(train_step:int,gym_env_val:gym.Env,n_steps_val:int=n_steps_val,\n",
     "        writer:SummaryWriter=writer):\n",
@@ -463,18 +442,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "source": [
     "# Initialize the environment and state\n",
     "cnt = 0\n",
     "gym_env_cp = copy.deepcopy(gym_env)\n",
     "for i in range(0,EPOCH):\n",
+    "    \n",
+    "    steps_done = 0\n",
+    "\n",
     "    gym_env = copy.deepcopy(gym_env_cp)\n",
     "    state = torch.zeros((1,13), dtype=torch.float32)\n",
     "    ovr_reward = 0\n",
     "    for i_episode in tqdm.tqdm_notebook(range(n_steps),desc='Train'):\n",
     "        # Select and perform an action\n",
-    "        action = select_action(state)\n",
+    "        action = select_action(state,steps_done)\n",
+    "        steps_done+=1\n",
     "        # Observe new state\n",
     "        next_state, reward, done, info = gym_env.step([action.item()//64, action.item()%64])\n",
     "\n",
@@ -526,63 +509,18 @@
     "\n",
     "val(cnt, copy.deepcopy(gym_env_val))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "ipykernel_launcher:8: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "95fea6f7e4dc46fb90464d802a63ec9b"
-      },
-      "text/plain": [
-       "Train:   0%|          | 0/61631 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "ipykernel_launcher:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "438b9f8ba94741a6a81ad753f2c04ac0"
-      },
-      "text/plain": [
-       "Validation:   0%|          | 0/306431 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {}
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.9 64-bit ('torch_rl': venv)"
+   "display_name": "Python 3.6.13 64-bit ('ITU': conda)"
   },
   "language_info": {
    "name": "python",
-   "version": "3.6.9",
+   "version": "3.6.13",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -594,7 +532,7 @@
   },
   "orig_nbformat": 2,
   "interpreter": {
-   "hash": "f8337d322f02065436781250dc8881439cca8a58f1212dae4e4294dbbc4e4375"
+   "hash": "704f8173b5278a07e1dad217082faca02c99b0dff81b24cc095b855fb1648990"
   }
  },
  "nbformat": 4,
