Corrected Replay Memory

--- a/RL.ipynb
+++ b/RL.ipynb
@@ -107,7 +107,7 @@
    "execution_count": null,
    "source": [
     "reward_type = 'train'    # 'test' or 'train'\n",
-    "epi = [0,10] #[start,end] \n",
+    "epi = [0,0] #[start,end] \n",
     "epi_val = [500,549]\n",
     "\n",
     "\n",
@@ -273,6 +273,7 @@
     "\n",
     "TARGET_UPDATE = 1000\n",
     "VAL_STEP = 100000\n",
+    "Replay = 10000\n",
     "\n",
     "EPOCH = 10"
    ],
@@ -296,7 +297,7 @@
     "target_net.eval()\n",
     "\n",
     "optimizer = optim.Adam(policy_net.parameters())\n",
-    "memory = ReplayMemory(10000)\n",
+    "# memory = ReplayMemory(10000)\n",
     "\n",
     "n_actions = 64*3\n",
     "steps_done = 0\n",
@@ -338,7 +339,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "def optimize_model():\n",
+    "def optimize_model(memory:ReplayMemory):\n",
     "    if len(memory) < BATCH_SIZE:\n",
     "        return\n",
     "    transitions = memory.sample(BATCH_SIZE)\n",
@@ -450,6 +451,7 @@
     "for i in range(0,EPOCH):\n",
     "    \n",
     "    steps_done = 0\n",
+    "    memory = ReplayMemory(Replay)\n",
     "\n",
     "    gym_env = copy.deepcopy(gym_env_cp)\n",
     "    state = torch.zeros((1,13), dtype=torch.float32)\n",
@@ -479,15 +481,15 @@
     "        state = next_state\n",
     "\n",
     "        # Perform one step of the optimization (on the policy network)\n",
-    "        optimize_model()\n",
+    "        optimize_model(memory)\n",
     "        \n",
     "        # Update the target network, copying all weights and biases in DQN\n",
     "        if i_episode % TARGET_UPDATE == 0:\n",
     "            target_net.load_state_dict(policy_net.state_dict())\n",
     "\n",
-    "        if (i_episode) == 0:\n",
-    "            val(cnt, copy.deepcopy(gym_env_val))\n",
-    "        cnt+=1\n",
+    "        # if (i_episode) == 0:\n",
+    "        #     val(cnt, copy.deepcopy(gym_env_val))\n",
+    "        # cnt+=1\n",
     "        \n",
     "    print(f'Overall Train reward after epoch {i} = {ovr_reward:.2f}. ' \\\n",
     "        f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
